Fix HOME tab spacing issue in mobile navigation only

--- a/css/style.css
+++ b/css/style.css
@@ -1261,17 +1261,17 @@ fieldset {
     }
     .table-cell {
         text-align: left;
-        padding: 0;
+        padding-left: 20px;
         width: 50%;
         order: 1;
     }
     #profilediv {
-        width: 50%;
+        width: 20%;
         text-align: left;
         order: 2;
     }
     #profilepic {
-        width: 260px;
+        width: 100px;
         margin: 0;
         order: 2;
     }
